# doc2md-toolkit

./: .gitignore  LICENSE  README.md  SKILL.md  pyproject.toml
agents/: openai.yaml
examples/: README.md
src/doc2md_toolkit/: cli.py  detect.py
src/doc2md_toolkit/engines/: markitdown_engine.py  mineru_engine.py  pdf2txt_engine.py
tests/: test_detect.py
